--- a/command/4.default/config.yml
+++ b/command/4.default/config.yml
@@ -17,8 +17,8 @@ audio:
       window_size: 0
     enable: true
     frames_per_buffer: 4096
-    name: ''
     index: -1
+    name: ''
     periodsize: 160
     sample_bytes: 2
     sample_rate: 4000
@@ -31,13 +31,14 @@ audio:
       loud: 0
 
   output:
-    name: ''
-    index: -1
+    aplay_binary: ''
+    chunk_size: 1024
     enable: true
+    frames_per_buffer: 1024
+    index: -1
+    name: ''
     route: audio
     use_aplay: false
-    frames_per_buffer: 1024
-    chunk_size: 1024
 
 control_program:
   enable: true
