Now we can animate the x, y, and z rotations separately

--- a/command/4.global/element/image.yml
+++ b/command/4.global/element/image.yml
@@ -1,3 +1,10 @@
 type: image
 file: Raspi64x64.png
-duration: 5 seconds
+z: 20
+# z: { 0: 10, 10: 100, 20: 1000 }
+# size: { 0: 0.5, 5: 1.0, 10: 2.0 }
+rotation:
+  0: [0, 0, 0]
+  5: [0, 0, 360.0]
+  10: [360.0, 0, 360.0]
+  15: [360.0, 360.0, 360.0]
