--- a/command/4.global/score/score.yml
+++ b/command/4.global/score/score.yml
@@ -170,8 +170,10 @@ element:
 # The Sequence Element triggers events in temporal sequence.
 
 type: sequence
+duration: 20 seconds
+loops: 3
 
-arguments:
+elements:
   -
     time: 0
     element:
