--- a/command/5.default/config.yml
+++ b/command/5.default/config.yml
@@ -25,7 +25,7 @@ audio:
     name: ''
     periodsize: 160
     sample_bytes: 2
-    sample_rate: 8000
+    sample_rate: [4000, 8000, 16000]
     verbose: false
 
     levels:
