--- a/command/4.global/config.yml
+++ b/command/4.global/config.yml
@@ -1,2 +1,14 @@
-score: {file: non-existent.yml}
-audio: {input: {name: ak5370}}
+score:
+  file: non-existent.yml
+
+audio:
+  input:
+    name: ak5370
+
+map:
+  name:
+    b8:27:eb:29:8a:ab: chairman
+    00:1F:5B:33:07:74: control
+
+  tags:
+    control: [foo, bar]
