--- a/command/4.master/score/marek.yml
+++ b/command/4.master/score/marek.yml
@@ -24,5 +24,5 @@ element:
       weight: 3
       element:
         type: print
-        message: echomesh: the wave of the future.
+        message: "echomesh: the wave of the future."
 
