--- a/command/4.master/score/image.yml
+++ b/command/4.master/score/image.yml
@@ -1,10 +1,12 @@
 type: image
 file: Raspi64x64.png
 z: 20
+position: [0, 0]
+size: 1.0
 # z: { 0: 10, 10: 100, 20: 1000 }
 # size: { 0: 0.5, 5: 1.0, 10: 2.0 }
-rotation:
-  0: [0, 0, 0]
-  5: [0, 0, 360.0]
-  10: [360.0, 0, 360.0]
-  15: [360.0, 360.0, 360.0]
+#rotation:
+#  0: [0, 0, 0]
+#  5: [0, 0, 360.0]
+#  10: [360.0, 0, 360.0]
+#  15: [360.0, 360.0, 360.0]
