--- a/command/4.master/score/image.yml
+++ b/command/4.master/score/image.yml
@@ -4,10 +4,15 @@ type: image
 file: Raspi64x64.png
 
 # I've tried 10, 100 and -1 for z, nothing.
-z: 1
+z:
+  0: 10
+  10: 30
+  20: 100
 
-# I've tried 100,100.
-position: [0, 0]
+position:
+  0: [0, 0]
+  10: [100, 100]
+  20: [-1000, -1000]
 
 duration: 200 seconds
 
