--- a/command/master/score/test.yml
+++ b/command/master/score/test.yml
@@ -1,20 +1,8 @@
----
-
-# This is a sequence element that triggers events in temporal sequence.
-
-type: sequence
-
-commands:
-  -
-    time: 2.0
-    function: audio
-    keywords:
-      file: long-saw.wav
-
-  -
-   time: 7.0
-   function: audio
-   keywords:
-     file: long-saw.wav
-     pan: [[0, -1], [10, 1], [11, -1]]
-
+type: list
+element:
+  type: repeat
+  period: 0.5
+  repeat: 10
+  element:
+    type: print
+    text: "{parent.parent.repeat_count} of {parent.parent.repeat}"
