First start at C++ lighting program

--- a/code/cpp/Makefile
+++ b/code/cpp/Makefile
@@ -12,8 +12,12 @@ SOURCES = \
   Scheduler.cpp \
   ThreadPool.cpp \
 
+LIGHT_PROGRAM = Lights
+LIGHT_SOURCES = Lights.cpp
 
 OBJECTS = $(SOURCES:.cpp=.o)
+LIGHT_OBJECTS = $(LIGHT_SOURCES:.cpp=.o)
+
 RM = rm -f
 
 .cpp.o:
@@ -24,5 +28,9 @@ all: $(PROGRAM)
 $(PROGRAM): $(OBJECTS)
 	$(LINK.cc) -o $@ $(OBJECTS)
 
+$(LIGHT_PROGRAM): $(LIGHT_OBJECTS)
+	$(LINK.cc) -o $@ $(LIGHT_OBJECTS)
+
 clean:
 	$(RM) $(PROGRAM) $(OBJECTS) make.out
+
