--- a/command/master/score/twitter.yml
+++ b/command/master/score/twitter.yml
@@ -3,18 +3,21 @@
 # It searches Twitter for one or more keys at regular intervals and sends out
 # Events for each new Tweet.
 
-type: TwitterSearch
+type: repeat
+period: 1 second     # Search once a second.
 
-interval: 1 second     # Search once a second.
+element:
+  type: twitter
+  search:
+    - xyzzy              # Search for any Twitter containing the string xyzzy.
+    - "#baseball"        # Search for the hashtag #baseball.
+                         # You have to put #baseball in quotes so it doesn't
+                         # become a comment!
+                         # You could also just write this:
+                         # search: [xyzzy, "#baseball"]
 
-search:
-  - xyzzy              # Search for any Twitter containing the string xyzzy.
-  - "#baseball"        # Search for the hashtag #baseball.
-                       # You have to put #baseball in quotes so it doesn't
-                       # become a comment!
+  handler:
+    type: print          # Print the twitter to the console.
 
-handler:
-  type: print          # Print the twitter to the console.
-
-# The handler section is optional.
-# Were there no handlers, Events would be passed up to the Score.
+  # The handler section is optional.
+  # Were there no handlers, Events would be passed up to the Score.
