Changes to the demo

--- a/command/master/score/light.yml
+++ b/command/master/score/light.yml
@@ -20,9 +20,9 @@ scenes:
       end: white
       steps: 16
 
-elements:
-  -
-    begin: 0
-    duration: 10
-    type: scene
-    scene: one
+# elements:
+#   -
+#     begin: 0
+#     duration: 10
+#     type: scene
+#     scene: one
