--- a/code/python/echomesh/config/config.yml
+++ b/code/python/echomesh/config/config.yml
@@ -174,6 +174,14 @@ light:
   period: 10ms
   type: spi
 
+  layout:
+    border: 2
+    border_color: black
+    border_width: 1
+    dimensions: 0, 0
+    shape: circle
+    size: 10
+
 # The load modules are third-party Python modules that are optional to the core
 # functional of the program but still extremely useful.
 load_module:
