--- a/code/python/echomesh/config/config.yml
+++ b/code/python/echomesh/config/config.yml
@@ -268,6 +268,8 @@ pi3d:
 # The path to your project's root directory.
 project: ''
 
+speed: 100%
+
 # RUNNING OR LOADING SCORES ON STARTUP
 #
 # Any scores listed in score: will be loaded and started when echomesh starts
